fix: Fix the color contrast issue with the heading

--- a/src/App.css
+++ b/src/App.css
@@ -31,5 +31,5 @@ a:focus {
   color: #c94e50;
 }
 h1 {
-  color: #555;
+  color: #eee;
 }
